# slugai

./: .gitignore  pyproject.toml
src/slugai/: callback.py  phase.py  train.py
tests/: conftest.py  test_callbacks.py  test_slugai.py  test_train.py
