[tool.poetry]
name = "slugai"
version = "0.1.0"
description = ""
authors = ["Alex <Alexander@Milden.net>"]

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.11.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
