[tool.poetry]
name = "slugai"
version = "0.1.0"
description = ""
authors = ["Alex <Alexander@Milden.net>"]

[tool.poetry.dependencies]
python = "3.7.12"
torch = "1.11.0"
numpy = "^1.21"
torchvision = "^0.12.0"
tqdm = "^4.63.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
poethepoet = "^0.13.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
